force-app/main/default/objects/AmazonS3__mdt/AmazonS3__mdt.object-meta.xml
<CustomObject>
    <label>AmazonS3</label>
    <pluralLabel>AmazonS3</pluralLabel>
</CustomObject>