force-app/main/default/objects/AmazonS3__mdt/fields/AccessKey__c.field-meta.xml
<CustomField>
    <fullName>AccessKey__c</fullName>
    <label>Access Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>