force-app/main/default/objects/AmazonS3__mdt/fields/bucket__c.field-meta.xml
<CustomField>
    <fullName>bucket__c</fullName>
    <label>bucket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>