force-app/main/default/objects/AmazonS3__mdt/fields/folder__c.field-meta.xml
<CustomField>
    <fullName>folder__c</fullName>
    <label>folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>