force-app/main/default/objects/AmazonS3__mdt/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <label>region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>