force-app/main/default/objects/AmazonS3__mdt/fields/SecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecretKey__c</fullName>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>